@@ -268,7 +268,7 @@ See also `py-no-completion-calls-dabbrev-expand-p'"
   :type 'boolean
   :group 'python-mode)
 
-(defcustom py-set-fill-column-p nil
+(defcustom py-auto-fill-mode nil
   "If python-mode should set fill-column
 
 according values in `py-comment-fill-column' and `py-docstring-fill-column'.
@@ -2282,205 +2282,47 @@ See py-no-outdent-1-re-raw, py-no-outdent-2-re-raw for better readable content "
 
 ;;; Toggle
 ;; py-docstring-style forms
-(defun toggle-py-nil-docstring-style (&optional arg)
-  "If nil docstring-style should be on or off.
-
-  Returns value of `py-docstring-style' switched to.
-To set permanently,  customize this variable "
+(defun py-set-nil-docstring-style ()
+  "Set py-docstring-style to 'nil"
   (interactive)
-  (let ((arg (or arg (if (eq py-docstring-style nil) -1 1))))
-    (if (< 0 arg)
-        (setq py-docstring-style 'nil)
-      (setq py-docstring-style nil))
-    (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-    py-docstring-style))
+  (setq py-docstring-style 'nil)
+  (when (and (interactive-p) py-verbose-p)
+    (message "docstring-style set to:  %s" py-docstring-style)))
 
-(defun py-nil-docstring-style-on (&optional arg)
-  "Make sure, nil docstring-style' is on.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
+(defun py-set-pep-257-nn-docstring-style ()
+  "Set py-docstring-style to 'pep-257-nn"
   (interactive)
-  (let ((arg (or arg 1)))
-    (toggle-py-nil-docstring-style arg))
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
+  (setq py-docstring-style 'pep-257-nn)
+  (when (and (interactive-p) py-verbose-p)
+    (message "docstring-style set to:  %s" py-docstring-style)))
 
-(defun py-nil-docstring-style-off ()
-  "Make sure, nil docstring-style is off.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
+(defun py-set-pep-257-docstring-style ()
+  "Set py-docstring-style to 'pep-257"
   (interactive)
-  (toggle-py-nil-docstring-style -1)
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
+  (setq py-docstring-style 'pep-257)
+  (when (and (interactive-p) py-verbose-p)
+    (message "docstring-style set to:  %s" py-docstring-style)))
 
-(defun toggle-py-onetwo-docstring-style (&optional arg)
-  "If onetwo docstring-style should be on or off.
-
-  Returns value of `py-docstring-style' switched to.
-To set permanently,  customize this variable "
+(defun py-set-django-docstring-style ()
+  "Set py-docstring-style to 'django"
   (interactive)
-  (let ((arg (or arg (if (eq py-docstring-style 'onetwo) -1 1))))
-    (if (< 0 arg)
-        (setq py-docstring-style 'onetwo)
-      (setq py-docstring-style nil))
-    (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-    py-docstring-style))
+  (setq py-docstring-style 'django)
+  (when (and (interactive-p) py-verbose-p)
+    (message "docstring-style set to:  %s" py-docstring-style)))
 
-(defun py-onetwo-docstring-style-on (&optional arg)
-  "Make sure, onetwo docstring-style' is on.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
+(defun py-set-symmetric-docstring-style ()
+  "Set py-docstring-style to 'symmetric"
   (interactive)
-  (let ((arg (or arg 1)))
-    (toggle-py-onetwo-docstring-style arg))
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
+  (setq py-docstring-style 'symmetric)
+  (when (and (interactive-p) py-verbose-p)
+    (message "docstring-style set to:  %s" py-docstring-style)))
 
-(defun py-onetwo-docstring-style-off ()
-  "Make sure, onetwo docstring-style is off.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
+(defun py-set-onetwo-docstring-style ()
+  "Set py-docstring-style to 'onetwo"
   (interactive)
-  (toggle-py-onetwo-docstring-style -1)
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun toggle-py-pep-257-docstring-style (&optional arg)
-  "If pep-257 docstring-style should be on or off.
-
-  Returns value of `py-pep-257-docstring-style' switched to. "
-  (interactive)
-  (let ((arg (or arg (if (eq py-docstring-style 'pep-257) -1 1))))
-    (if (< 0 arg)
-        (setq py-docstring-style 'pep-257)
-      (setq py-docstring-style nil))
-    (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-    py-docstring-style))
-
-(defun py-pep-257-docstring-style-on (&optional arg)
-  "Make sure, pep-257 docstring-style' is on.
-
-Returns value of `py-pep-257-docstring-style'. "
-  (interactive)
-  (let ((arg (or arg 1)))
-    (toggle-py-pep-257-docstring-style arg))
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun py-pep-257-docstring-style-off ()
-  "Make sure, pep-257 docstring-style is off.
-
-Returns value of `py-pep-257-docstring-style'. "
-  (interactive)
-  (toggle-py-pep-257-docstring-style -1)
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun toggle-py-pep-257-nn-docstring-style (&optional arg)
-  "If pep-257-nn docstring-style should be on or off.
-
-  Returns value of `py-pep-257-nn-docstring-style' switched to. "
-  (interactive)
-  (let ((arg (or arg (if (eq py-docstring-style 'pep-257-nn) -1 1))))
-    (if (< 0 arg)
-        (setq py-docstring-style 'pep-257-nn)
-      (setq py-docstring-style nil))
-    (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-    py-docstring-style))
-
-(defun py-pep-257-nn-docstring-style-on (&optional arg)
-  "Make sure, pep-257-nn docstring-style' is on.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
-  (interactive)
-  (let ((arg (or arg 1)))
-    (toggle-py-pep-257-nn-docstring-style arg))
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun py-pep-257-nn-docstring-style-off ()
-  "Make sure, pep-257-nn docstring-style is off.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
-  (interactive)
-  (toggle-py-pep-257-nn-docstring-style -1)
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun toggle-py-symmetric-docstring-style (&optional arg)
-  "If symmetric docstring-style should be on or off.
-
-  Returns value of `py-docstring-style' switched to.
-To set permanently,  customize this variable "
-  (interactive)
-  (let ((arg (or arg (if (eq py-docstring-style 'symmetric) -1 1))))
-    (if (< 0 arg)
-        (setq py-docstring-style 'symmetric)
-      (setq py-docstring-style nil))
-    (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-    py-docstring-style))
-
-(defun py-symmetric-docstring-style-on (&optional arg)
-  "Make sure, symmetric docstring-style' is on.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
-  (interactive)
-  (let ((arg (or arg 1)))
-    (toggle-py-symmetric-docstring-style arg))
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun py-symmetric-docstring-style-off ()
-  "Make sure, symmetric docstring-style is off.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
-  (interactive)
-  (toggle-py-symmetric-docstring-style -1)
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun toggle-py-django-docstring-style (&optional arg)
-  "If django docstring-style should be on or off.
-
-  Returns value of `py-docstring-style' switched to.
-To set permanently,  customize this variable "
-  (interactive)
-  (let ((arg (or arg (if (eq py-docstring-style 'django) -1 1))))
-    (if (< 0 arg)
-        (setq py-docstring-style 'django)
-      (setq py-docstring-style nil))
-    (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-    py-docstring-style))
-
-(defun py-django-docstring-style-on (&optional arg)
-  "Make sure, django docstring-style' is on.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
-  (interactive)
-  (let ((arg (or arg 1)))
-    (toggle-py-django-docstring-style arg))
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
-
-(defun py-django-docstring-style-off ()
-  "Make sure, django docstring-style is off.
-
-  Returns value of `py-docstring-style'.
-To set permanently,  customize this variable "
-  (interactive)
-  (toggle-py-django-docstring-style -1)
-  (when (or py-verbose-p (interactive-p)) (message "py-docstring-style: %s" py-docstring-style))
-  py-docstring-style)
+  (setq py-docstring-style 'onetwo)
+  (when (and (interactive-p) py-verbose-p)
+    (message "docstring-style set to:  %s" py-docstring-style)))
 
 ;; py-underscore-word-syntax-p forms
 (defun toggle-py-underscore-word-syntax-p (&optional arg)
@@ -15545,12 +15387,12 @@ Use `M-x customize-variable' to set it permanently"])
                       )
 
                      ["Auto-fill mode"
-                      (setq py-set-fill-column-p
-                            (not py-set-fill-column-p))
-                      :help "Set Python specific `fill-column' according to `py-docstring-fill-column' and `py-comment-fill-column'
+                      (setq py-auto-fill-mode
+                            (not py-auto-fill-mode))
+                      :help "Fill according to `py-docstring-fill-column' and `py-comment-fill-column'
 
 Use `M-x customize-variable' to set it permanently"
-                      :style toggle :selected py-set-fill-column-p]
+                      :style toggle :selected py-auto-fill-mode]
 
                      ["Use current dir when execute"
                       (setq py-use-current-dir-when-execute-p
@@ -23161,7 +23003,7 @@ FILE-NAME."
 
 (defun py-run-auto-fill-timer ()
   "Set fill-column to values of `py-docstring-fill-column' resp. to `py-comment-fill-column' according to environment. "
-  (when py-set-fill-column-p
+  (when py-auto-fill-mode
     (unless py-autofill-timer
       (setq py-autofill-timer
             (run-with-idle-timer
@@ -23311,7 +23153,7 @@ See available customizations listed in files variables-python-mode at directory 
    (t
     (add-hook 'completion-at-point-functions
               'py-shell-complete nil 'local)))
-  (if py-set-fill-column-p
+  (if py-auto-fill-mode
       (add-hook 'python-mode-hook 'py-run-auto-fill-timer)
     (remove-hook 'python-mode-hook 'py-run-auto-fill-timer))
   ;; caused insert-file-contents error lp:1293172
